--- a/ClientIT/Controls/NewProjectControl.xaml
+++ b/ClientIT/Controls/NewProjectControl.xaml
@@ -2,9 +2,9 @@
     x:Class="ClientIT.Controls.NewProjectControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:ClientIT.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
     xmlns:models="using:ClientIT.Models"
     mc:Ignorable="d">
 
@@ -19,7 +19,6 @@ xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
 
                 <StackPanel Spacing="16">
                     <TextBox x:Name="TxtTitolo" Header="Titolo Progetto" PlaceholderText="Es: Migrazione Server 2025" HorizontalAlignment="Stretch"/>
-
                     <TextBox x:Name="TxtDescrizione" Header="Descrizione" 
                              PlaceholderText="Descrivi gli obiettivi del progetto..." 
                              AcceptsReturn="True" TextWrapping="Wrap" Height="80" HorizontalAlignment="Stretch"/>
@@ -33,12 +32,10 @@ xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-
                         <StackPanel Grid.Column="0" VerticalAlignment="Center">
                             <TextBlock Text="Fasi del Progetto" Style="{ThemeResource SubtitleTextBlockStyle}"/>
                             <TextBlock Text="Trascina le fasi per cambiare l'ordine" FontSize="12" Opacity="0.6"/>
                         </StackPanel>
-
                         <Button x:Name="BtnAddPhase" Grid.Column="1" Style="{ThemeResource AccentButtonStyle}" Click="BtnAddPhase_Click">
                             <StackPanel Orientation="Horizontal" Spacing="8">
                                 <FontIcon Glyph="&#xE710;"/>
@@ -68,14 +65,11 @@ xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
                                         <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
-
                                     <FontIcon Glyph="&#xE76F;" Margin="0,0,12,0" Opacity="0.4" ToolTipService.ToolTip="Trascina per spostare"/>
-
                                     <StackPanel Grid.Column="1" VerticalAlignment="Center">
                                         <TextBlock Text="{x:Bind Titolo, Mode=OneWay}" FontWeight="Bold"/>
                                         <TextBlock Text="{x:Bind Descrizione, Mode=OneWay}" FontSize="12" Opacity="0.6" TextTrimming="CharacterEllipsis" MaxLines="1"/>
                                     </StackPanel>
-
                                     <StackPanel Grid.Column="2" VerticalAlignment="Center" Margin="16,0">
                                         <Border Background="{ThemeResource CardBackgroundFillColorSecondaryBrush}" CornerRadius="4" Padding="6,2" HorizontalAlignment="Right" Margin="0,0,0,4">
                                             <TextBlock Text="{x:Bind Stato.Nome, Mode=OneWay}" FontSize="11" FontWeight="SemiBold"/>
@@ -85,7 +79,6 @@ xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
                                             <TextBlock Text="{x:Bind AssegnatoA.Nome, Mode=OneWay}" FontSize="11" Opacity="0.7"/>
                                         </StackPanel>
                                     </StackPanel>
-
                                     <Button Grid.Column="3" Background="Transparent" BorderThickness="0" Click="BtnRemovePhase_Click" Tag="{x:Bind}">
                                         <FontIcon Glyph="&#xE74D;" Foreground="Red" FontSize="16"/>
                                     </Button>
@@ -94,29 +87,86 @@ xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
                         </ListView.ItemTemplate>
                     </ListView>
                 </StackPanel>
+
                 <StackPanel Spacing="8" Visibility="{x:Bind HasPhases, Mode=OneWay}">
-                    <TextBlock Text="Cronoprogramma (Gantt)" Style="{ThemeResource SubtitleTextBlockStyle}"/>
+                    <TextBlock Text="Roadmap Temporale" Style="{ThemeResource SubtitleTextBlockStyle}"/>
 
                     <Border Background="{ThemeResource CardBackgroundFillColorDefaultBrush}" 
-            CornerRadius="8" 
-            BorderThickness="1" 
-            BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}" 
-            Padding="0">
+                            CornerRadius="8" 
+                            BorderThickness="1" 
+                            BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}" 
+                            Padding="0">
 
-                        <ScrollViewer HorizontalScrollBarVisibility="Auto">
-                            <lvc:CartesianChart
-        Series="{Binding GanttSeries}"
-        XAxes="{Binding GanttXAxes}"
-        YAxes="{Binding GanttYAxes}"
-        Width="{Binding ChartWidth}"
-        Height="{Binding ChartHeight}"
-        ZoomMode="X" />
+                        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+                            <Grid Width="{x:Bind RoadmapWidth, Mode=OneWay}" MinHeight="150" Padding="0,0,24,24">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="30"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+
+                                <ItemsControl Grid.Row="0" Grid.RowSpan="2" ItemsSource="{x:Bind TimelineLabels}">
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <Grid/>
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate x:DataType="local:TimelineLabel">
+                                            <Grid HorizontalAlignment="Left" Margin="{x:Bind Margin}" Width="1">
+                                                <Rectangle Width="1" Fill="{ThemeResource CardStrokeColorDefaultBrush}" Opacity="0.5" VerticalAlignment="Stretch"/>
+                                                <TextBlock Text="{x:Bind Text}" FontSize="10" Opacity="0.5" Margin="4,0,0,0" VerticalAlignment="Top"/>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+
+                                <ItemsControl Grid.Row="1" ItemsSource="{x:Bind RoadmapItems}" Margin="0,10,0,0">
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <StackPanel Spacing="12"/>
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate x:DataType="local:RoadmapItem">
+                                            <Grid Height="32">
+                                                <Button HorizontalAlignment="Left" 
+                                                        VerticalAlignment="Stretch"
+                                                        Margin="{x:Bind Margin}" 
+                                                        Width="{x:Bind Width}"
+                                                        Padding="0"
+                                                        BorderThickness="0"
+                                                        CornerRadius="4"
+                                                        Background="{x:Bind Color}"
+                                                        ToolTipService.ToolTip="{x:Bind TooltipText}"
+                                                        Click="RoadmapItem_Click"
+                                                        Tag="{x:Bind}">
+
+                                                    <Grid Padding="8,0">
+                                                        <TextBlock Text="{x:Bind Titolo}" 
+                                                                   Foreground="White" 
+                                                                   FontSize="12" 
+                                                                   FontWeight="SemiBold" 
+                                                                   VerticalAlignment="Center" 
+                                                                   TextTrimming="CharacterEllipsis"/>
+                                                    </Grid>
+                                                </Button>
+
+                                                <TextBlock Text="{x:Bind DateText}" 
+                                                           HorizontalAlignment="Left"
+                                                           VerticalAlignment="Center"
+                                                           Margin="{x:Bind TextMargin}"
+                                                           FontSize="10" 
+                                                           Opacity="0.7"/>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </Grid>
                         </ScrollViewer>
-
-
-
                     </Border>
                 </StackPanel>
+
                 <Button x:Name="BtnSaveProject" Content="Salva Progetto" Style="{ThemeResource AccentButtonStyle}" HorizontalAlignment="Stretch" Margin="0,24,0,0" Click="BtnSaveProject_Click"/>
                 <ProgressRing x:Name="SavingRing" IsActive="False" Visibility="Collapsed" HorizontalAlignment="Center" Margin="0,8,0,0"/>
             </StackPanel>
