aggiunta commenti per progetti e vista progetti

--- a/ClientIT/MainWindow.xaml
+++ b/ClientIT/MainWindow.xaml
@@ -36,10 +36,18 @@
 
             <StackPanel Grid.Row="0" Spacing="12" Margin="0,0,0,12">
                 <TextBlock Text="Team IT" Style="{ThemeResource SubtitleTextBlockStyle}"/>
+
                 <Button x:Name="ShowAllButton" HorizontalAlignment="Stretch" Click="ShowAllButton_Click" Style="{ThemeResource AccentButtonStyle}">
                     <StackPanel Orientation="Horizontal" Spacing="8">
                         <FontIcon Glyph="&#xE71D;"/>
                         <TextBlock Text="Tutti i Ticket"/>
+                    </StackPanel>
+                </Button>
+
+                <Button x:Name="ShowProjectsButton" HorizontalAlignment="Stretch" Click="ShowProjectsButton_Click">
+                    <StackPanel Orientation="Horizontal" Spacing="8">
+                        <FontIcon Glyph="&#xE8F1;"/>
+                        <TextBlock Text="Tutti i Progetti"/>
                     </StackPanel>
                 </Button>
             </StackPanel>
@@ -90,6 +98,7 @@
         </Grid>
 
         <Grid Grid.Column="1">
+
             <Grid x:Name="NewTicketViewArea" Visibility="Collapsed">
                 <controls:NewTicketControl x:Name="NewTicketControl"/>
             </Grid>
@@ -101,9 +110,51 @@
             <Grid x:Name="NewProjectViewArea" Visibility="Collapsed">
                 <controls:NewProjectControl x:Name="NewProjectControl"/>
             </Grid>
-        </Grid>
 
-        <Grid Grid.Column="1">
+            <Grid x:Name="ProjectListViewArea" Visibility="Collapsed">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Text="Elenco Progetti" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,0,0,16"/>
+
+                <ListView x:Name="ProjectListView" Grid.Row="1" SelectionMode="Single" IsItemClickEnabled="True" ItemClick="ProjectListView_ItemClick">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                            <Setter Property="Margin" Value="0,0,0,8"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:ProjectViewModel">
+                            <Grid Background="{ThemeResource LayerFillColorAltBrush}" CornerRadius="8" Padding="16" BorderThickness="1" BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="6"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Rectangle Fill="{x:Bind StatoColor}" RadiusX="2" RadiusY="2" Margin="0,0,12,0"/>
+
+                                <StackPanel Grid.Column="1" VerticalAlignment="Center">
+                                    <TextBlock Text="{x:Bind Titolo}" FontWeight="Bold" FontSize="16"/>
+                                    <TextBlock Text="{x:Bind Descrizione}" Opacity="0.6" MaxLines="2" TextTrimming="CharacterEllipsis"/>
+                                </StackPanel>
+
+                                <Border Grid.Column="2" Background="{ThemeResource CardBackgroundFillColorSecondaryBrush}" CornerRadius="4" Padding="8,4" VerticalAlignment="Center">
+                                    <TextBlock Text="{x:Bind StatoNome}" FontSize="12" FontWeight="SemiBold"/>
+                                </Border>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+
+            <Grid x:Name="ProjectDetailViewArea" Visibility="Collapsed">
+                <controls:ProjectDetailControl x:Name="ProjectDetailControl"/>
+            </Grid>
+
             <Grid x:Name="ListViewArea" Visibility="Visible">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
