--- a/ClientIT/App.xaml
+++ b/ClientIT/App.xaml
@@ -2,14 +2,16 @@
     x:Class="ClientIT.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ClientIT">
+    xmlns:local="using:ClientIT"
+    xmlns:converters="using:ClientIT.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <!-- QUESTA È LA RIGA PIÙ IMPORTANTE DEL PROGETTO -->
-                <!-- Carica 'Border', 'Grid', 'Window', 'TextBox', ecc. -->
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
             </ResourceDictionary.MergedDictionaries>
+
+            <converters:DateToStringConverter x:Key="DateToStringConverter"/>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
